--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
                 "-i",
                 "${file}",
                 "-o",
-                "${fileBasenameNoExtension}.out"
+                "${fileBasenameNoExtension}"
             ],
             "console": "internalConsole"
         },
@@ -25,7 +25,7 @@
                 "-i",
                 "${file}",
                 "-o",
-                "${fileBasenameNoExtension}.out"
+                "${fileBasenameNoExtension}"
             ],
             "MIMode": "gdb",
         }
